--- a/app/src/main/res/layout/fragment_login_form.xml
+++ b/app/src/main/res/layout/fragment_login_form.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.login.view.formscreen.LoginFormFragment">
+    tools:context="com.etsisi.appquitectura.presentation.ui.login.view.formscreen.LoginFormFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
