--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.etsisi.appquitectura.presentation.ui.login.view.formscreen.LoginFormFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.etsisi.appquitectura.presentation.ui.login.viewmodel.LoginViewModel" />
@@ -28,22 +25,6 @@
             app:viewModel="@{viewModel}" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_login"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/input_text_height"
-            android:layout_marginTop="@dimen/dimen_12"
-            android:focusable="true"
-            android:background="@drawable/shape_submit_button"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:onClick="@{() -> viewModel.initLogin()}"
-            android:text="@string/login_btn_txt"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/form" />
-
-        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_register"
             android:layout_width="0dp"
             android:layout_height="@dimen/input_text_height"
@@ -51,13 +32,13 @@
             android:focusable="true"
             android:background="@drawable/shape_submit_button"
             android:foreground="?android:attr/selectableItemBackground"
-            android:onClick="@{() -> viewModel.onRegister()}"
+            android:onClick="@{() -> viewModel.initRegister()}"
             android:text="@string/register_btn_text"
             android:textAllCaps="true"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+            app:layout_constraintTop_toBottomOf="@+id/form" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
