--- a/app/src/main/res/navigation/login.xml
+++ b/app/src/main/res/navigation/login.xml
@@ -3,22 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login"
-    app:startDestination="@id/loginFormFragment">
-
+    app:startDestination="@id/form_fragment">
+    <action
+        android:id="@+id/navigate_login_to_main"
+        app:destination="@id/main_activity" />
     <fragment
-        android:id="@+id/loginFormFragment"
+        android:id="@id/form_fragment"
         android:name="com.etsisi.appquitectura.presentation.ui.login.view.formscreen.LoginFormFragment"
-        android:label="fragment_login_form"
+        android:label="Form fragment"
         tools:layout="@layout/fragment_login_form" >
         <action
-            android:id="@+id/action_loginForm_to_registerForm"
-            app:destination="@id/registerFormFragment"
-            app:popUpTo="@id/registerFormFragment"
-            app:popUpToInclusive="true" />
+            android:id="@id/navigate_to_form"
+            app:destination="@id/form_fragment"/>
+        <argument
+            android:name="navType"
+            app:argType="com.etsisi.appquitectura.domain.enums.NavType"
+            android:defaultValue="LOGIN" />
+        <action
+            android:id="@id/navigate_to_emailVerificationFragment"
+            app:destination="@id/email_verification_fragment" />
     </fragment>
     <fragment
-        android:id="@+id/registerFormFragment"
-        android:name="com.etsisi.appquitectura.presentation.ui.login.view.formscreen.RegisterFormFragment"
-        android:label="RegisterFormFragment"
-        tools:layout="@layout/fragment_register"/>
+        android:id="@id/email_verification_fragment"
+        android:name="com.etsisi.appquitectura.presentation.ui.login.view.formscreen.EmailVerificationFragment"
+        android:label="EmailVerificationFragment"
+        tools:layout="@layout/fragment_email_verification">
+        <argument
+            android:name="emailVerified"
+            app:argType="boolean"
+            android:defaultValue="false" />
+    </fragment>
+    <activity
+        android:id="@id/main_activity"
+        android:name="com.etsisi.appquitectura.presentation.ui.main.view.MainActivity"
+        android:label="ActivityMain"
+        tools:layout="@layout/activity_main" />
 </navigation>
