--- a/app/src/main/res/layout/login_form.xml
+++ b/app/src/main/res/layout/login_form.xml
@@ -45,7 +45,7 @@
                 android:layout_marginBottom="@dimen/dimen_4"
                 android:hint="@string/hint_password"
                 android:minHeight="@dimen/input_text_height"
-                app:endIconMode="password_toggle"
+                app:passwordToggleEnabled="true"
                 app:hintAnimationEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -53,6 +53,7 @@
                     android:layout_height="match_parent"
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
+                    android:ems="10"
                     android:text="@={viewModel.password}" />
 
             </com.google.android.material.textfield.TextInputLayout>
