--- a/app/src/main/res/navigation/login.xml
+++ b/app/src/main/res/navigation/login.xml
@@ -21,7 +21,9 @@
             android:defaultValue="LOGIN" />
         <action
             android:id="@id/navigate_to_emailVerificationFragment"
-            app:destination="@id/email_verification_fragment" />
+            app:destination="@id/email_verification_fragment"
+            app:popUpTo="@id/login"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@id/email_verification_fragment"
