--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Appquitectura" parent="ThemeOverlay.MaterialComponents.MaterialCalendar.Fullscreen">
-        <!--<item name="android:windowBackground">@color/launcher_background</item>
-        <item name="android:statusBarColor">@color/launcher_background</item>-->
+    <style name="Theme.Appquitectura" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">@color/white</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,13 +13,15 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorAccent">@color/red_error</item>
+        <item name="android:colorAccent" tools:targetApi="lollipop">@color/red_error</item>
     </style>
 
-    <style name="Theme.App.Splash" parent="Theme.Appquitectura">
-        <item name="windowSplashScreenBackground">@color/black</item>
+    <style name="Theme.App.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_background</item>
-        <item name="windowSplashScreenAnimationDuration">200</item>
-        <item name="postSplashScreenTheme">@style/Theme.Quizz</item>
+        <item name="windowSplashScreenAnimationDuration">300</item>
+        <item name="postSplashScreenTheme">@style/Theme.Appquitectura</item>
     </style>
 
     <style name="LoginActivityStyle" parent="Theme.Appquitectura">
