--- a/app/src/main/res/layout/dialog_navigation.xml
+++ b/app/src/main/res/layout/dialog_navigation.xml
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="config"
             type="com.etsisi.appquitectura.presentation.dialog.model.DialogConfig" />
     </data>
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:background="@drawable/shape_dialog"
+        android:orientation="vertical"
         tools:layout_width="300dp">
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottie"
             android:layout_width="@dimen/dimen_240"
             android:layout_height="@dimen/dimen_100"
-            android:layout_marginTop="@dimen/dimen_20"
+            android:layout_gravity="center"
             android:layout_marginStart="@dimen/dimen_20"
+            android:layout_marginTop="@dimen/dimen_20"
             android:layout_marginEnd="@dimen/dimen_20"
             android:scaleType="centerInside"
-            android:layout_gravity="center"
-            app:lottie_rawRes="@raw/lottie_404"
             app:lottie_autoPlay="true"
-            app:lottie_loop="true"/>
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/lottie_404" />
 
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/dialog_title"
             app:textRes="@{config.title}"
-            tools:text="TITLE"/>
+            tools:text="TITLE" />
+
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/dialog_body"
             app:textRes="@{config.body}"
-            tools:text="BODY"/>
+            tools:text="BODY" />
     </LinearLayout>
 </layout>
