--- a/app/src/main/res/navigation/login.xml
+++ b/app/src/main/res/navigation/login.xml
@@ -10,23 +10,25 @@
         app:enterAnim="@anim/enter_from_right"
         app:exitAnim="@anim/exit_to_left"
         app:popEnterAnim="@anim/enter_from_left"
-        app:popExitAnim="@anim/enter_from_right"/>
+        app:popExitAnim="@anim/enter_from_right"
+        app:popUpTo="@id/login"
+        app:popUpToInclusive="true" />
     <fragment
         android:id="@id/form_fragment"
         android:name="com.etsisi.appquitectura.presentation.ui.login.view.formscreen.LoginFormFragment"
         android:label="Form fragment"
-        tools:layout="@layout/fragment_login_form" >
+        tools:layout="@layout/fragment_login_form">
         <action
             android:id="@id/navigate_to_form"
             app:destination="@id/form_fragment"
             app:enterAnim="@anim/enter_from_right"
             app:exitAnim="@anim/exit_to_left"
             app:popEnterAnim="@anim/enter_from_left"
-            app:popExitAnim="@anim/enter_from_right"/>
+            app:popExitAnim="@anim/enter_from_right" />
         <argument
             android:name="navType"
-            app:argType="com.etsisi.appquitectura.domain.enums.NavType"
-            android:defaultValue="LOGIN" />
+            android:defaultValue="LOGIN"
+            app:argType="com.etsisi.appquitectura.domain.enums.NavType" />
         <action
             android:id="@id/navigate_to_emailVerificationFragment"
             app:destination="@id/email_verification_fragment"
@@ -49,8 +51,8 @@
         tools:layout="@layout/fragment_email_verification">
         <argument
             android:name="emailVerified"
-            app:argType="boolean"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            app:argType="boolean" />
     </fragment>
     <activity
         android:id="@id/main_activity"
