--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="dialog_title">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginStart">@dimen/dimen_28</item>
+        <item name="android:layout_marginEnd">@dimen/dimen_28</item>
         <item name="android:layout_marginTop">@dimen/dimen_20</item>
-        <item name="android:layout_marginStart">@dimen/dimen_24</item>
-        <item name="android:layout_marginEnd">@dimen/dimen_24</item>
-        <item name="android:textSize">@dimen/text_16</item>
+        <item name="android:textSize">@dimen/text_20</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:maxLines">3</item>
+        <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textStyle">normal</item>
         <item name="android:letterSpacing">-0.01</item>
         <item name="android:lineSpacingExtra">2sp</item>
+        <item name="android:textAlignment">center</item>
     </style>
+
     <style name="dialog_body">
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginTop">@dimen/dimen_20</item>
         <item name="android:layout_marginStart">@dimen/dimen_28</item>
         <item name="android:layout_marginEnd">@dimen/dimen_28</item>
-        <item name="android:textSize">@dimen/text_14</item>
+        <item name="android:layout_marginBottom">@dimen/dimen_7</item>
+        <item name="android:textSize">@dimen/text_16</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">normal</item>
         <item name="android:letterSpacing">-0.01</item>
         <item name="android:lineSpacingExtra">6sp</item>
+        <item name="maxLines">3</item>
     </style>
+
     <style name="dialog_no_actionbar" parent="android:Theme.Material.Dialog.NoActionBar">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
     </style>
+
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_up</item>
         <item name="android:windowExitAnimation">@anim/slide_down</item>
