--- a/app/src/main/res/layout/fragment_login_form.xml
+++ b/app/src/main/res/layout/fragment_login_form.xml
@@ -75,6 +75,18 @@
                     android:layout_marginTop="@dimen/dimen_12"
                     app:onClickCustom="@{() -> googleListener.initSignInGoogle()}" />
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_log_out"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/input_text_height"
+                    android:layout_marginTop="@dimen/dimen_12"
+                    android:background="@drawable/shape_submit_button"
+                    android:focusable="true"
+                    android:onClick="@{() -> viewModel.onLogOut()}"
+                    android:text="LOG OUT"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white" />
+
             </LinearLayout>
         </ScrollView>
 
