--- a/app/src/main/res/layout/fragment_login_form.xml
+++ b/app/src/main/res/layout/fragment_login_form.xml
@@ -32,10 +32,18 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:id="@+id/buttons_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvLogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/dimen_32"
+                    android:layout_gravity="center"
+                    android:text="@string/sign_in"
+                    android:textSize="@dimen/text_22" />
 
                 <include
                     android:id="@+id/form"
@@ -44,50 +52,37 @@
                     android:layout_height="wrap_content"
                     app:viewModel="@{viewModel}" />
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_login"
+                <com.google.android.flexbox.FlexboxLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/input_text_height"
-                    android:layout_marginTop="@dimen/dimen_12"
-                    android:background="@drawable/shape_submit_button"
-                    android:focusable="true"
-                    android:onClick="@{() -> viewModel.initFirebaseLogin()}"
-                    android:text="@string/login_btn_txt"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_10"
+                    app:alignItems="center"
+                    app:dividerDrawable="@drawable/divider"
+                    app:flexDirection="row"
+                    app:flexWrap="nowrap"
+                    app:showDivider="middle">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_login"
+                        style="@style/buttonStyle"
+                        android:onClick="@{() -> viewModel.initFirebaseLogin()}"
+                        android:text="@string/login_btn_txt" />
+
+                    <com.google.android.gms.common.SignInButton
+                        android:id="@+id/btn_google"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:onClickCustom="@{() -> googleListener.initSignInGoogle()}" />
+                </com.google.android.flexbox.FlexboxLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_register"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/input_text_height"
-                    android:layout_marginTop="@dimen/dimen_12"
-                    android:background="@drawable/shape_submit_button"
-                    android:focusable="true"
+                    style="@style/buttonStyle"
+                    android:layout_margin="@dimen/dimen_40"
                     android:onClick="@{() -> viewModel.onRegister()}"
-                    android:text="@string/register_btn_text"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white" />
-
-                <com.google.android.gms.common.SignInButton
-                    android:id="@+id/btn_google"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_12"
-                    app:onClickCustom="@{() -> googleListener.initSignInGoogle()}" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_log_out"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/input_text_height"
-                    android:layout_marginTop="@dimen/dimen_12"
-                    android:background="@drawable/shape_submit_button"
-                    android:focusable="true"
-                    android:onClick="@{() -> viewModel.onLogOut()}"
-                    android:text="LOG OUT"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white" />
-
+                    android:text="@string/register_btn_text" />
             </LinearLayout>
+
         </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
