--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="black">#FF000000</color>
     <color name="red_error">#FB3022</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="text_color_primary">#DA5C5555</color>
+    <color name="detail_image_gradient_color">#84878A</color>
+    <color name="detail_image_gradient_transparent_color">#00151a20</color>
 </resources>
