--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,4 +40,15 @@
         <item name="android:windowEnterAnimation">@anim/slide_up</item>
         <item name="android:windowExitAnimation">@anim/slide_down</item>
     </style>
+
+    <style name="buttonStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dimen_40</item>
+        <item name="android:background">@drawable/shape_submit_button</item>
+        <item name="android:layout_margin">@dimen/dimen_4</item>
+        <item name="android:elevation">@dimen/dimen_4</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#DA5C5555</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
