--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
         <!-- color de fondo de las actividades -->
         <item name="android:windowBackground">@color/white</item>
         <!-- Primary brand color.color for the app bar and other primary UI elements -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/text_color_primary</item>
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -23,13 +23,15 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here.  a secondary color for controls like checkboxes and text fields-->
         <item name="colorAccent">@color/red_error</item>
+        <item name="android:textColorPrimary">@color/text_color_primary</item>
         <item name="android:colorAccent" tools:targetApi="lollipop">@color/red_error</item>
     </style>
 
     <style name="Theme.App.Splash" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/white</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
-        <item name="windowSplashScreenAnimationDuration">200</item>
+        <item name="windowSplashScreenBackground">@color/black</item>
+<!--        <item name="windowSplashScreenAnimatedIcon">@drawable/icon_example</item>
+        <item name="android:windowSplashScreenBrandingImage" tools:targetApi="s">@drawable/wol</item>-->
+        <item name="windowSplashScreenAnimationDuration">100</item>
         <item name="postSplashScreenTheme">@style/Theme.Appquitectura</item>
     </style>
 
