--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="item"
             type="com.etsisi.appquitectura.presentation.ui.main.model.ItemHome" />
@@ -15,28 +14,45 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="@dimen/dimen_120"
-        android:layout_height="@dimen/dimen_90"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/dimen_4"
-        android:clickable="true"
-        android:onClick="@{() -> listener.onMenuItemClicked(item)}">
+        android:clickable="true">
 
-        <androidx.cardview.widget.CardView
+        <ImageView
+            android:id="@+id/imgProfile"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:cardBackgroundColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:adjustViewBounds="true"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="@{() -> listener.onMenuItemClicked(item)}"
+            android:padding="@dimen/dimen_2"
+            app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcRes="@{item.icon}"
+            tools:src="@drawable/ic_profile" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                app:srcRes="@{item.icon}"
-                tools:src="@drawable/ic_profile" />
-        </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/txtProfileName"
+            android:layout_width="@dimen/dimen_64"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_4"
+            android:gravity="center_horizontal"
+            android:minHeight="@dimen/dimen_16"
+            android:singleLine="true"
+            android:textColor="@color/text_color_primary"
+            android:textSize="@dimen/text_12"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgProfile"
+            app:lineHeight="@dimen/text_16"
+            app:textRes="@{item.title}"
+            tools:text="Profile" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
