--- a/app/src/main/res/drawable/splash_gradient.xml
+++ b/app/src/main/res/drawable/splash_gradient.xml
@@ -4,7 +4,7 @@
     <gradient
         android:type="linear"
         android:angle="90"
-        android:startColor="@color/primary_alpha_red"
-        android:centerColor="@color/primary_alpha_yellow"
-        android:endColor="@color/primary_alpha_blue" />
+        android:startColor="#99887C7B"
+        android:centerColor="@color/white"
+        android:endColor="@color/white" />
 </shape>
