--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -5,6 +5,12 @@
     android:id="@+id/main"
     app:startDestination="@id/homeFragment">
 
+    <action
+        android:id="@+id/action_main_to_login"
+        app:destination="@id/loginActivity"
+        app:popUpTo="@id/main"
+        app:popUpToInclusive="true" />
+
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.etsisi.appquitectura.presentation.ui.main.view.HomeFragment"
@@ -13,12 +19,21 @@
         <action
             android:id="@+id/action_home_to_settings"
             app:destination="@id/settingsFragment"
+            app:enterAnim="@anim/enter_from_right"
+            app:exitAnim="@anim/exit_to_left"
+            app:popEnterAnim="@anim/enter_from_left"
+            app:popExitAnim="@anim/enter_from_right"
             app:popUpTo="@id/settingsFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.etsisi.appquitectura.presentation.ui.main.view.SettingsFragment"
         android:label="SettingsFragment"
-        tools:layout="@layout/fragment_settings"/>
+        tools:layout="@layout/fragment_settings" />
+    <activity
+        android:id="@+id/loginActivity"
+        android:name="com.etsisi.appquitectura.presentation.ui.login.view.LoginActivity"
+        android:label="LoginActivity"
+        tools:layout="@layout/activity_login" />
 </navigation>
