--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="item"
             type="com.etsisi.appquitectura.presentation.ui.main.model.ItemHome" />
@@ -38,19 +39,15 @@
 
         <TextView
             android:id="@+id/txtProfileName"
-            android:layout_width="@dimen/dimen_64"
+            style="@style/itemTextStyle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_4"
             android:gravity="center_horizontal"
             android:minHeight="@dimen/dimen_16"
-            android:singleLine="true"
-            android:textColor="@color/text_color_primary"
-            android:textSize="@dimen/text_12"
-            android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgProfile"
-            app:lineHeight="@dimen/text_16"
             app:textRes="@{item.title}"
             tools:text="Profile" />
     </androidx.constraintlayout.widget.ConstraintLayout>
