--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,4 +51,12 @@
         <item name="android:textColor">#DA5C5555</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="itemTextStyle">
+        <item name="maxLines">2</item>
+        <item name="android:textColor">@color/text_color_primary</item>
+        <item name="android:textSize">@dimen/text_16</item>
+        <item name="android:textStyle">normal</item>
+        <item name="lineHeight">@dimen/text_16</item>
+    </style>
 </resources>
